example/example-ingress-author.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aem
    deployment: example-aem
  name: author-example-aem
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4502
  selector:
    app: aem
    deployment: example-aem
    runmode: author
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: author-example-aem
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: aem
    deployment: example-aem
    runmode: author
spec:
  rules:
  - host: author-example-aem.grid.xumak.io
    http:
      paths:
      - backend:
          serviceName: author-example-aem
          servicePort: 80
  - host: dispatcher-example-aem.grid.xumak.io
    http:
      paths:
      - backend:
          serviceName: dispatcher-01-example-aem
          servicePort: 80
